wowsreg/wowsreg/resources/wowsreg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wowsreg-web
spec:
  selector:
    app: wowsreg
  ports:
    - name: http
      port: 8080
      targetPort: 8080
